<resources>
    <string name="app_name">Ogyong</string>
    <string name="action_settings">Settings</string>
    <string name="share">Share</string>
    <string name="app_id">749154988439242</string>
    <string name="post_status">Post</string>
    <string name="title_activity_post">Ogyong</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_sticker">Sticker</string>
    <string name="pref_title_template">Status template</string>
    <string name="pref_default_template">Now playing \&#39;@track\&#39; \nby \&#39;@artist\&#39; \nfrom album \&#39;@album\&#39;</string>
    <string name="pref_title_status_template">Design status template</string>
    <string name="pref_description_status_template">Press here to start designing your status template.</string>
    <string name="pref_title_randomize_sticker">Randomize sticker media</string>
    <string name="pref_description_randomize_sticker">Select a random sticker image when posting new status to social media.</string>
    <string name="pref_title_sticker_selection">Select stickers</string>
    <string name="pref_description_sticker_selection">Select stickers from available selection which will be included in status update.</string>
    <string name="pref_header_location_sync">Location sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>10 minutes</item>
        <item>20 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>600</item>
        <item>120</item>
        <item>180</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_status_posted_notifications">Status posted notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="twitter_include_location">Include location</string>
    <string name="twitter_randomize_location">Randomize location</string>
    <string name="twitter_loading_handle">Loading handle…</string>
    <string name="twitter_loading_name">Loading name…</string>
    <string name="facebook_randomize_location">Randomize location</string>
    <string name="facebook_include_location">Include location</string>
    <string name="title_activity_status_template">Template</string>
    <string name="title_activity_sticker">Sticker</string>
    <string name="pref_header_status">Status</string>
    <string name="pref_description_automate_update">Allow the background service to post updates on your behalf.</string>
    <string name="pref_title_automate_update">Automate status posting</string>
</resources>